--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "start": "next start",
     "lint": "next lint",
     "type-check": "tsc --noEmit",
+    "test": "vitest run",
     "db:generate": "prisma generate",
     "db:push": "prisma db push",
     "db:migrate": "prisma migrate dev",
@@ -38,6 +39,7 @@
     "next-auth": "^5.0.0-beta.30",
     "next-intl": "^3.25.0",
     "next-themes": "^0.4.3",
+    "nodemailer": "^7.0.7",
     "prisma": "^6.19.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
@@ -56,6 +58,9 @@
     "postcss": "^8.4.49",
     "tailwindcss": "^3.4.15",
     "tsx": "^4.20.6",
-    "typescript": "^5.6.3"
+    "typescript": "^5.6.3",
+    "@types/nodemailer": "^6.4.9",
+    "vite-tsconfig-paths": "^5.1.0",
+    "vitest": "^1.6.0"
   }
 }
